// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User creates user with defaults 1`] = `
Object {
  "email": "test@email.com",
  "id": "fdsfsdfsdf",
  "password": "bobobobo",
  "roles": undefined,
}
`;

exports[`User fails on wrong email 1`] = `[ValidationError: email must be a valid email]`;

exports[`User updates email 1`] = `
Object {
  "email": "test@email.com",
  "id": undefined,
  "password": "bobobobo",
  "roles": undefined,
}
`;

exports[`User updates id 1`] = `
Object {
  "email": "test@email.com",
  "id": "fdsfsdfsdf",
  "password": "bobobobo",
  "roles": undefined,
}
`;

exports[`User updates password 1`] = `
Object {
  "email": "test@email.com",
  "id": undefined,
  "password": "39393kfkfkf",
  "roles": undefined,
}
`;

exports[`User updates roles 1`] = `
Object {
  "email": "test@email.com",
  "id": undefined,
  "password": "bobobobo",
  "roles": Array [
    "user",
    "admin",
  ],
}
`;
